social media additionals and thumbnail test

--- a/404.html
+++ b/404.html
@@ -88,6 +88,12 @@
   <link href="https://twitter.com/p0laryse" rel="me" />
   
   
+  <link href="https://infosec.exchange/@polaryse" rel="me" />
+  
+  
+  <link href="https://github.com/polaryse" rel="me" />
+  
+  
   
   
 
