analytics like button fix

--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
   <script>
 
     const firebaseConfig = {
-      apiKey: "AIzaSyB5tqlqDky77Vb4Tc4apiHV4hRZI18KGiY",
-      authDomain: "AIzaSyB5tqlqDky77Vb4Tc4apiHV4hRZI18KGiY",
+      apiKey: "AIzaSyAVpLNVJvJI978eeofu9QtYDloSDZ5HKiY",
+      authDomain: "AIzaSyAVpLNVJvJI978eeofu9QtYDloSDZ5HKiY",
       projectId: "polaryse-e5ded",
       storageBucket: "polaryse-e5ded.appspot.com",
-      messagingSenderId:  null ,
+      messagingSenderId: "196688950789",
       appId: "1:196688950789:web:daa0043ca3d82b21b34e6c",
       measurementId: "G-NP66FV21FJ"
     };
