--- a/topics/0xcc-2023/index.html
+++ b/topics/0xcc-2023/index.html
@@ -1163,7 +1163,7 @@
               <span class="flex flex-col">
                 <span
                   class="mt-[0.1rem] leading-6 group-hover:underline group-hover:decoration-primary-500"
-                  >The difference between Dynamic and Static analysis</span
+                  >The difference between dynamic and static analysis</span
                 >
                 <span class="mt-[0.1rem] text-xs text-neutral-500 dark:text-neutral-400">
                   
